--- a/index.html
+++ b/index.html
@@ -73,7 +73,34 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main class="container">
+        <div id="sliderpokemon" class="carousel slide my-4" data-bs-ride="true">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#sliderpokemon" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#sliderpokemon" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#sliderpokemon" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/slider 1.webp" class="d-block w-100 banner" alt="pokebola">
+              </div>
+              <div class="carousel-item">
+                <img src="img/slider 2.webp" class="d-block w-100 banner" alt="pokemonslider">
+              </div>
+              <div class="carousel-item">
+                <img src="img/slider 3.jpeg" class="d-block w-100 banner" alt="pokemon">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#sliderpokemon" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#sliderpokemon" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </main>
     <footer>
         <p class="p-4 bg-dark text-light text-center">&copy; Todos los derechos reservados</p>
     </footer>
