agrego sistema de grillas con pokemones

--- a/index.html
+++ b/index.html
@@ -100,6 +100,121 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+
+          <aside class="row justify-content-center">
+            <div class="card m-2 col-3 col-sm-12" style="width: 16rem;">
+                <img src="img/001.png" class="card-img-top" alt="bulbasaur">
+                <div class="card-body">
+                    <p class="card-text">N.°001</p>
+                  <h5 class="card-title">Bulbasaur</h5>
+                  <a href="#" class="btn colorplanta btn-sm  rounded-pill">Planta</a>
+                  <a href="#" class="btn colorveneno btn-sm rounded-pill">Veneno</a>
+                  <div>
+                      <a href="#" class="btn btn-primary mt-2">Ver detalle</a>
+
+                  </div>
+                </div>
+              </div>
+            <div class="card m-2 col-3 col-sm-12" style="width: 16rem;">
+                <img src="img/002.png" class="card-img-top" alt="Ivysaur">
+                <div class="card-body">
+                    <p class="card-text">N.°002</p>
+                  <h5 class="card-title">Ivysaur</h5>
+                  <a href="#" class="btn colorplanta btn-sm  rounded-pill">Planta</a>
+                  <a href="#" class="btn colorveneno btn-sm rounded-pill">Veneno</a>
+                  <div>
+                      <a href="#" class="btn btn-primary mt-2">Ver detalle</a>
+
+                  </div>
+                </div>
+              </div>
+            <div class="card m-2 col-3 col-sm-12" style="width: 16rem;">
+                <img src="img/003.png" class="card-img-top" alt="venosaur">
+                <div class="card-body">
+                    <p class="card-text">N.°003</p>
+                  <h5 class="card-title">Venosaur</h5>
+                  <a href="#" class="btn colorplanta btn-sm  rounded-pill">Planta</a>
+                  <a href="#" class="btn colorveneno btn-sm rounded-pill">Veneno</a>
+                  <div>
+                      <a href="#" class="btn btn-primary mt-2">Ver detalle</a>
+
+                  </div>
+                </div>
+              </div>
+            <div class="card m-2 col-3 col-sm-12" style="width: 16rem;">
+                <img src="img/004.png" class="card-img-top" alt="charmander">
+                <div class="card-body">
+                    <p class="card-text">N.°004</p>
+                  <h5 class="card-title">Charmander</h5>
+                  <a href="#" class="btn colorfuego btn-sm  rounded-pill">Fuego</a>
+                  <div>
+                      <a href="#" class="btn btn-primary mt-2">Ver detalle</a>
+
+                  </div>
+                </div>
+              </div>
+            <div class="card m-2 col-3 col-sm-12" style="width: 16rem;">
+                <img src="img/005.png" class="card-img-top" alt="charmeleon">
+                <div class="card-body">
+                    <p class="card-text">N.°005</p>
+                  <h5 class="card-title">Charmeleon</h5>
+                  <a href="#" class="btn colorfuego btn-sm  rounded-pill">Fuego</a>
+                  <div>
+                      <a href="#" class="btn btn-primary mt-2">Ver detalle</a>
+
+                  </div>
+                </div>
+              </div>
+            <div class="card m-2 col-3 col-sm-12" style="width: 16rem;">
+                <img src="img/006.png" class="card-img-top" alt="charizard">
+                <div class="card-body">
+                    <p class="card-text">N.°006</p>
+                  <h5 class="card-title">Charizard</h5>
+                  <a href="#" class="btn colorfuego btn-sm  rounded-pill">Fuego</a>
+                  <a href="#" class="btn colorvolador btn-sm rounded-pill">Volador</a>
+                  <div>
+                      <a href="#" class="btn btn-primary mt-2">Ver detalle</a>
+
+                  </div>
+                </div>
+              </div>
+            <div class="card m-2 col-3 col-sm-12" style="width: 16rem;">
+                <img src="img/007.png" class="card-img-top" alt="squirtle">
+                <div class="card-body">
+                    <p class="card-text">N.°007</p>
+                  <h5 class="card-title">Squirtle</h5>
+                  <a href="#" class="btn btn-primary btn-sm  rounded-pill">Agua</a>
+                  <div>
+                      <a href="#" class="btn btn-primary mt-2">Ver detalle</a>
+
+                  </div>
+                </div>
+              </div>
+            <div class="card m-2 col-3 col-sm-12" style="width: 16rem;">
+                <img src="img/008.png" class="card-img-top" alt="wartortle">
+                <div class="card-body">
+                    <p class="card-text">N.°008</p>
+                  <h5 class="card-title">Wartortle</h5>
+                  <a href="#" class="btn btn-primary btn-sm  rounded-pill">Agua</a>
+                  <div>
+                      <a href="#" class="btn btn-primary mt-2">Ver detalle</a>
+
+                  </div>
+                </div>
+              </div>
+            <div class="card m-2 col-3 col-sm-12" style="width: 16rem;">
+                <img src="img/009.png" class="card-img-top" alt="blastoise">
+                <div class="card-body">
+                    <p class="card-text">N.°009</p>
+                  <h5 class="card-title">Blastoise</h5>
+                  <a href="#" class="btn btn-primary btn-sm  rounded-pill">Agua</a>
+                  <div>
+                      <a href="#" class="btn btn-primary mt-2">Ver detalle</a>
+
+                  </div>
+                </div>
+              </div>
+          </aside>
     </main>
     <footer>
         <p class="p-4 bg-dark text-light text-center">&copy; Todos los derechos reservados</p>
