agrego toda la pag de la descripcion del pokemon

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header  >
       <nav class="navbar navbar-expand-lg bg-danger ">
         <div class="container">
-          <a class="navbar-brand text-light" href="#">Pokedex</a>
+          <a class="navbar-brand text-light" href="index.html">Pokedex</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -40,7 +40,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-light" aria-current="page" href="#"
+                <a class="nav-link active text-light" aria-current="page" href="index.html"
                   >Inicio</a
                 >
               </li>
@@ -110,7 +110,7 @@
                   <a href="#" class="btn colorplanta btn-sm  rounded-pill">Planta</a>
                   <a href="#" class="btn colorveneno btn-sm rounded-pill">Veneno</a>
                   <div>
-                      <a href="#" class="btn btn-primary mt-2">Ver detalle</a>
+                      <a href="pages/descripcion.html" class="btn btn-primary mt-2">Ver detalle</a>
 
                   </div>
                 </div>
